--- a/app/templates/bpmn-files.hbs
+++ b/app/templates/bpmn-files.hbs
@@ -11,9 +11,9 @@
   <table>
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Format</th>
-        <th>Size (bytes)</th>
+        <th>Naam</th>
+        <th>Formaat</th>
+        <th>Grootte (bytes)</th>
         <th>Download</th>
       </tr>
     </thead>
@@ -35,5 +35,5 @@
     </tbody>
   </table>
 {{else}}
-  <p>No files found.</p>
+  <p>Geen bestanden gevonden.</p>
 {{/if}}
