--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,1 +1,22 @@
-@import "@appuniversum/ember-appuniversum/styles";
+/* ==================================
+   #APPUNIVERSUM
+   ================================== */
+
+/**
+ * A design universe for Flanders GOV applications
+ */
+
+/**
+ * CONTENTS
+ * ---
+ * SETTINGS: Project settings and variables
+ * TOOLS: Mixins
+ * GENERIC: Reset, global box-sizing and font-styles
+ * ELEMENTS: Plain html tag styling
+ * OBJECTS: OOCSS unstyled objects (namespace: '.au-o-...')
+ * COMPONENTS: Components (namespace: '.au-c-...')
+ * UTILITIES: Single function helper classes (namespace: '.au-u-...')
+ */
+
+/* EMBER-APPUNIVERSUM */
+@import '@appuniversum/ember-appuniversum/styles';
