Populate index page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,3 +20,6 @@
 
 /* EMBER-APPUNIVERSUM */
 @import '@appuniversum/ember-appuniversum/styles';
+
+/* COMPONENTS */
+@import 'components/sidebar-container';
