--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,5 +22,6 @@
 @import '@appuniversum/ember-appuniversum/styles';
 
 /* COMPONENTS */
+@import 'components/cards';
 @import 'components/sidebar-container';
 @import 'components/table-message';
