Show bpmn diagram

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,3 +25,4 @@
 @import 'components/cards';
 @import 'components/sidebar-container';
 @import 'components/table-message';
+@import 'components/bpmn-viewer';
