Change strucuture slightly

--- a/app/templates/bpmn-files/bpmn-file.hbs
+++ b/app/templates/bpmn-files/bpmn-file.hbs
@@ -15,6 +15,10 @@
     </div>
   </:sidebar>
   <:content>
-    {{outlet}}
+    <div class="au-c-body-container au-c-body-container--scroll">
+      <div class="au-o-box au-o-flow au-o-flow--large">
+        {{outlet}}
+      </div>
+    </div>
   </:content>
 </SidebarContainer>
