--- a/app/templates/bpmn-files/index.hbs
+++ b/app/templates/bpmn-files/index.hbs
@@ -26,6 +26,34 @@
     </div>
   </:sidebar>
   <:content>
+    {{#if this.newFileId}}
+      <AuAlert
+        @title="Gelukt!"
+        @skin="success"
+        @icon="check"
+        @size="small"
+        @closable="true"
+        @onClose={{this.closeAlert}}
+        class="au-u-margin au-u-margin-bottom-none"
+      >
+        <p>
+          <LinkTo
+            class="au-c-link"
+            @model={{this.newFileId}}
+            @route="bpmn-files.bpmn-file"
+          >Raadpleeg nieuw BPMN-bestand
+          </LinkTo></p>
+      </AuAlert>
+    {{/if}}
+
+    <PageHeader class="au-o-box">
+      <:title>BPMN-bestanden</:title>
+      <:subtitle>BPMN-bestanden beschrijven processen</:subtitle>
+      <:action>
+        <AuButton {{on "click" this.openFileModal}}>Voeg toe</AuButton>
+      </:action>
+    </PageHeader>
+
     <AuDataTable
       @content={{this.bpmnFiles}}
       @isLoading={{this.isLoading}}
@@ -45,13 +73,7 @@
         {{else if this.hasNoResults}}
           <TableMessage>
             <p>
-              Er werden geen zoekresultaten gevonden. Kijk na op spelfouten, of
-              probeer een andere zoekopdracht. Indien een organisatie ontbreekt,
-              meldt dit aan
-              <a
-                class="au-c-link"
-                href="mailto:{{config 'contactEmail'}}"
-              >{{config "contactEmail"}}</a>
+              Er werden geen zoekresultaten gevonden.
             </p>
           </TableMessage>
         {{else}}
@@ -67,10 +89,34 @@
             </td>
             <td>{{file.extension}}</td>
             <td>{{file.format}}</td>
-            <td>{{file.size}}</td>
+            <td>{{file-size-format file.size}}</td>
           </c.body>
         {{/if}}
       </t.content>
     </AuDataTable>
   </:content>
 </SidebarContainer>
+
+<AuModal
+  @modalOpen={{this.fileModalOpened}}
+  @closeModal={{this.closeFileModal}}
+>
+  <:title>Voeg BPMN-bestand toe</:title>
+  <:body>
+    <AuFileUpload
+      @accept=".bpmn,.xml"
+      @endPoint={{this.postEndpoint}}
+      @title="Bestand selecteren"
+      @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
+      @onFinishUpload={{this.fileUploaded}}
+    />
+  </:body>
+  <:footer>
+    <AuButtonGroup class="au-u-flex--end">
+      <AuButton
+        @skin="naked"
+        {{on "click" this.closeFileModal}}
+      >Annuleer</AuButton>
+    </AuButtonGroup>
+  </:footer>
+</AuModal>
