Style bpmn container

--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -71,4 +71,6 @@
   @skin="5"
   class="au-u-margin-bottom-tiny"
 >Diagram</AuHeading>
+<p class="au-u-para-small au-u-margin-top-none">Klik en hou vast om diagram te
+  bewegen. Gebruik ctrl en scrollwiel om in en uit te zoomen.</p>
 <BpmnViewer @bpmnXml={{@model.diagram}} />
