Display tasks in process steps table

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -87,7 +87,7 @@
             </c.content>
             <c.footer>
               <AuButtonGroup class="au-c-button-group--wrap">
-                <LinkTo class="au-c-button" @route="process-steps">
+                <LinkTo class="au-c-button" @route="bpmn-elements">
                   Ga naar processtappen
                 </LinkTo>
               </AuButtonGroup>
