Fix bpmn element types

--- a/app/templates/bpmn-elements/index.hbs
+++ b/app/templates/bpmn-elements/index.hbs
@@ -56,7 +56,7 @@
         {{else}}
           <c.body as |element|>
             <td>{{element.name}}</td>
-            <td>{{element.type}}</td>
+            <td>{{element.type.description}}</td>
             <td>Link</td>
           </c.body>
         {{/if}}
