--- a/app/templates/bpmn-elements/index.hbs
+++ b/app/templates/bpmn-elements/index.hbs
@@ -17,7 +17,7 @@
           </div>
           <div class="au-o-grid__item au-u-1-2@small au-u-1-1@medium">
             <AuLabel for="filter-type">Type</AuLabel>
-            <BpmnFileSelectByType
+            <BpmnElementSelectByType
               @id="filter-type"
               @selected={{this.type}}
               @onChange={{this.setType}}
