--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,6 +11,11 @@
               BPMN-bestanden
             </AuNavigationLink>
           </li>
+          <li class="au-c-list-navigation__item">
+            <AuNavigationLink @route="bpmn-elements">
+              Processtappen
+            </AuNavigationLink>
+          </li>
         </ul>
       </div>
       <div class="au-c-sidebar__footer">
