Update html title

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 {{page-title
   (concat
-    "Organisatie Portaal"
+    "Open Proces Huis"
     (if this.showEnvironment (concat " - " this.environmentName))
   )
 }}
