update entry page, add legal pages

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -26,3 +26,5 @@
 @import 'components/sidebar-container';
 @import 'components/table-message';
 @import 'components/bpmn-viewer';
+@import 'components/c-home';
+@import 'components/c-footer';
