--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 {{page-title
   (concat
-    "Organisatie Portaal"
+    "Open Proces Huis"
     (if this.showEnvironment (concat " - " this.environmentName))
   )
 }}
@@ -14,13 +14,14 @@
     )}}"
 >
   <AppHeader />
-  <main id="main" class="au-c-main-container">
-    <div
-      class="au-c-main-container__content au-c-main-container__content--scroll"
-      id="content"
-      tabindex="-1"
-    >
-      {{outlet}}
-    </div>
-  </main>
+  {{outlet}}
 </AuApp>
+{{!-- 
+<main id="main" class="au-c-main-container">
+  <div
+    class="au-c-main-container__content au-c-main-container__content--scroll"
+    id="content"
+    tabindex="-1"
+  >
+  </div>
+</main> --}}
