--- a/app/templates/route-not-found.hbs
+++ b/app/templates/route-not-found.hbs
@@ -1,12 +1,10 @@
-{{page-title "Pagina niet gevonden"}}
+{{page-title "404"}}
 
-<div class="au-c-body-container au-c-body-container--scroll">
-  <div class="au-o-region-large">
-    <div class="au-o-layout">
-      <AuContent @skin="large">
-        <h1>We kunnen de pagina niet vinden</h1>
-        <p>Er is iets fout gelopen. De link die je bezocht, bestaat niet.</p>
-      </AuContent>
-    </div>
-  </div>
-</div>
+<LayoutDetail>
+  <Oops
+    @title="Oeps, die pagina vonden we niet terug"
+    @content="De pagina die u zoekt, vonden we niet terug."
+    @image="/assets/images/page-not-found.svg"
+  />
+  {{outlet}}
+</LayoutDetail>
