--- a/app/components/bpmn-viewer.hbs
+++ b/app/components/bpmn-viewer.hbs
@@ -1,4 +1,4 @@
 <div
-  class="bpmn-container au-o-box au-u-margin-top-none"
+  class="bpmn-container au-u-margin-top-small"
   {{did-insert this.setupViewer}}
 ></div>
