--- a/app/components/navigation-bar.hbs
+++ b/app/components/navigation-bar.hbs
@@ -1,28 +1,27 @@
-<AuToolbar @border="bottom" @size="small" @skin="tint" as |Group|>
+<AuToolbar @border="bottom" @skin="tint" class="au-c-navigation" as |Group|>
   <Group>
-    <nav aria-label="breadcrumbs">
-      <ol class="au-c-list-horizontal au-c-list-horizontal--breadcrumbs">
-        <li class="au-c-list-horizontal__item">
-          <AuLink @route="index" @icon="arrow-left" @iconAlignment="left">
-            Overzicht
-          </AuLink>
-        </li>
-        {{#each (breadcrumbs) as |breadcrumb|}}
-          <li class="au-c-list-horizontal__item">
-            {{#if (is-last breadcrumb (breadcrumbs))}}
-              {{breadcrumb.title}}
-            {{else}}
-              <AuLink
-                @route={{breadcrumb.data.route}}
-                @model={{breadcrumb.data.model}}
-                @models={{breadcrumb.data.models}}
-              >
-                {{breadcrumb.title}}
-              </AuLink>
-            {{/if}}
-          </li>
-        {{/each}}
-      </ol>
-    </nav>
+    <AuTabs @reversed={{this.reversed}} as |Tab|>
+      <Tab>
+        <AuLink @route="bpmn-files" @icon="sitemap">
+          Processen
+        </AuLink>
+      </Tab>
+      <Tab>
+        <AuLink @route="bpmn-elements" @icon="unordered-list">
+          Bouwblokken
+        </AuLink>
+      </Tab>
+      {{!-- <Tab>
+        <AuLink @route="help" @skin="secondary" @icon="circle-info">
+          Over BPMN bestanden
+        </AuLink>
+      </Tab> --}}
+    </AuTabs>
+
+  </Group>
+  <Group>
+    <AuLink @route="bpmn-uploads" @skin="button-secondary">
+      Mijn processen
+    </AuLink>
   </Group>
 </AuToolbar>
