--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,4 +27,7 @@
 @import 'components/table-message';
 @import 'components/bpmn-viewer';
 @import 'components/c-home';
+@import 'components/c-navigation';
 @import 'components/c-footer';
+
+@import 'shame';
