--- a/app/styles/components/_cards.scss
+++ b/app/styles/components/_cards.scss
@@ -17,15 +17,16 @@ $card-label-whitespace: $au-unit-small;
   @include mq(1279px) {
     display: flex;
     flex-wrap: wrap;
+    gap: $au-unit;
   }
 }
 
 .au-c-card-columns__column {
-  padding: $au-unit-tiny $au-unit;
+  // padding: $au-unit-tiny $au-unit;
 
   @include mq(1279px) {
-    padding: $au-unit-small $au-unit;
-    width: 50%;
+    // padding: $au-unit-small $au-unit;
+    width: calc(50% - #{$au-unit/2});
   }
 }
 
