--- a/app/templates/bpmn-uploads/bpmn-file/index.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file/index.hbs
@@ -3,21 +3,86 @@
     {{@model.metadata.name}}
   </:title>
   <:action>
-    <a
-      class="au-c-button"
-      href="{{bpmn-download-url @model.metadata.id}}"
-      download="{{@model.metadata.name}}"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      Download BPMN bestand
-    </a>
+    <AuButtonGroup>
+      <a
+        class="au-c-button au-c-button--secondary"
+        href="{{bpmn-download-url @model.metadata.id}}"
+        download="{{@model.metadata.name}}"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Download BPMN bestand
+      </a>
+      <AuButton {{on "click" this.openFileModal}}>Vervang BPMN bestand</AuButton>
+    </AuButtonGroup>
   </:action>
 </PageHeader>
 
 <AuBodyContainer class="au-o-box au-o-flow" @scroll={{true}}>
+  {{#if this.edit}}
   <DataCard>
-    {{!-- <:title>Metadata</:title> --}}
+    <:title>
+      Metadata
+    </:title>
+    <:card as |Card|>
+      <Card.Columns>
+        <:left as |Item|>
+          <Item>
+            <:label>Bestandsnaam</:label>
+            <:content>
+              {{@model.metadata.name}}
+            </:content>
+          </Item>
+          <Item>
+            <:label>Aangemaakt op</:label>
+            <:content>
+              {{date-format @model.metadata.created}}
+            </:content>
+          </Item>
+          <Item>
+            <:label>Laatst aangepast op</:label>
+            <:content>
+              {{date-format @model.metadata.modified}}
+            </:content>
+          </Item>
+        </:left>
+        <:right as |Item|>
+          <Item>
+            <:label>Extensie</:label>
+            <:content>
+              {{@model.metadata.extension}}
+            </:content>
+          </Item>
+          <Item>
+            <:label>Formaat</:label>
+            <:content>
+              {{@model.metadata.format}}
+            </:content>
+          </Item>
+          <Item>
+            <:label>Grootte</:label>
+            <:content>
+              {{file-size-format @model.metadata.size}}
+            </:content>
+          </Item>
+        </:right>
+      </Card.Columns>
+    </:card>
+    <:action>
+      <div class="au-u-flex au-u-flex--spaced-small au-u-flex--end">
+        <AuButton @skin="secondary" {{on "click" this.toggleEdit}}>Annuleer</AuButton>
+        <AuButton @skin="primary" {{on "click" this.toggleEdit}}>Bewaar</AuButton>
+      </div>
+    </:action>
+  </DataCard>
+  {{else}}
+  <DataCard>
+    <:header>
+      <AuButton @skin="naked" @icon="pencil" {{on "click" this.toggleEdit}}>Wijzig</AuButton>
+    </:header>
+    <:title>
+      Metadata
+    </:title>
     <:card as |Card|>
       <Card.Columns>
         <:left as |Item|>
@@ -63,6 +128,8 @@
       </Card.Columns>
     </:card>
   </DataCard>
+  {{/if}}
+
 
   <div class="au-o-grid au-o-grid--tiny au-u-margin-top">
     <div class="au-o-grid__item">
@@ -120,3 +187,27 @@
     </div>
   </div>
 </AuBodyContainer>
+
+<AuModal
+  @modalOpen={{this.fileModalOpened}}
+  @closeModal={{this.closeFileModal}}
+>
+  <:title>Vervang BPMN-bestand</:title>
+  <:body>
+    <AuFileUpload
+      @accept=".bpmn,.xml"
+      @endPoint={{this.postEndpoint}}
+      @title="Bestand selecteren"
+      @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
+      @onFinishUpload={{this.fileUploaded}}
+    />
+  </:body>
+  <:footer>
+    <AuButtonGroup class="au-u-flex--end">
+      <AuButton
+        @skin="naked"
+        {{on "click" this.closeFileModal}}
+      >Annuleer</AuButton>
+    </AuButtonGroup>
+  </:footer>
+</AuModal>
