apply lint fixes

--- a/app/styles/components/_c-favorite.scss
+++ b/app/styles/components/_c-favorite.scss
@@ -21,7 +21,7 @@
   &:focus {
     color: var(--au-blue-500);
     background-color: transparent !important;
-    border-color: transparent !important
+    border-color: transparent !important;
   }
 }
 
