--- a/app/components/navigation-bar.hbs
+++ b/app/components/navigation-bar.hbs
@@ -8,7 +8,7 @@
       </Tab>
       <Tab>
         <AuLink @route="bpmn-elements" @icon="unordered-list">
-          Bouwblokken
+          Processtappen
         </AuLink>
       </Tab>
       {{!-- <Tab>
@@ -21,7 +21,7 @@
   </Group>
   <Group>
     <AuLink @route="bpmn-uploads" @skin="button-secondary">
-      Mijn processen
+      Gedeelde processen
     </AuLink>
   </Group>
 </AuToolbar>
