--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -10,9 +10,9 @@
     border-top: 0;
   }
 
-  .au-c-data-table__actions {
-    display: none;
-  }
+  // .au-c-data-table__actions {
+  //   display: none;
+  // }
 
   tbody tr:last-child,
   .au-c-data-table__message {
