--- a/app/templates/bpmn-files/index.hbs
+++ b/app/templates/bpmn-files/index.hbs
@@ -23,7 +23,7 @@
           class="au-o-box au-o-box--small au-o-flow au-o-flow--small"
         >
           <div>
-            <AuLabel for="filter-name">Filter op naam of beschrijving</AuLabel>
+            <AuLabel for="filter-name">Zoek op naam of beschrijving</AuLabel>
             <BpmnFileSelectByName
               @id="filter-name"
               @selected={{this.name}}
@@ -67,7 +67,6 @@
           Over BPMN bestanden
         </AuLink></:subtitle>
       <:action>
-        {{!-- <AuButton {{on "click" this.openFileModal}}>Voeg toe</AuButton> --}}
       </:action>
     </PageHeader>
 
