--- a/app/templates/bpmn-uploads/bpmn-file.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file.hbs
@@ -1,5 +1,5 @@
 {{page-title this.model.name}}
 
-{{breadcrumb this.model.name route="bpmn-files.bpmn-file" models=this.model.id}}
+{{breadcrumb this.model.name route="bpmn-uploads.bpmn-file" models=this.model.id}}
 
 {{outlet}}
