--- a/app/templates/bpmn-uploads/bpmn-file/index.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file/index.hbs
@@ -163,7 +163,7 @@
         @level="2"
         @skin="4"
         class="au-u-margin-bottom-small au-u-margin-top"
-      >Bouwblokken</AuHeading>
+      >Processtappen</AuHeading>
       <div class="au-c-boxed-table">
         <AuDataTable
           @content={{this.model.loadedBpmnFiles}}
