--- a/app/templates/bpmn-uploads/index.hbs
+++ b/app/templates/bpmn-uploads/index.hbs
@@ -46,7 +46,7 @@
     {{/if}}
 
     <PageHeader>
-      <:title>Mijn processen</:title>
+      <:title>Gedeelde processen</:title>
       <:subtitle><AuLink @route="help" @skin="secondary" @icon="circle-info">
           Over BPMN bestanden
         </AuLink></:subtitle>
