--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,109 +1,3 @@
-{{!-- <SidebarContainer>
-  <:sidebar>
-    <div class="au-c-sidebar">
-      <div class="au-c-sidebar__content">
-        <div class="au-c-sidebar__header">
-          <h6 class="au-u-h6 au-u-medium">Menu modules</h6>
-        </div>
-        <ul class="au-c-list-navigation">
-          <li class="au-c-list-navigation__item">
-            <AuNavigationLink @route="bpmn-files">
-              BPMN-bestanden
-            </AuNavigationLink>
-          </li>
-          <li class="au-c-list-navigation__item">
-            <AuNavigationLink @route="bpmn-elements">
-              Processtappen
-            </AuNavigationLink>
-          </li>
-        </ul>
-      </div>
-      <div class="au-c-sidebar__footer">
-        <a
-          href={{config "userManual.general"}}
-          class="au-c-link au-c-link--secondary au-c-link--icon"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <AuIcon @icon="manual" @alignment="left" />
-          Handleiding (externe link)
-        </a>
-        <AuHelpText @skin="secondary">
-          {{config "appName"}}
-          {{#if (config "showAppVersionHash")}}
-            (<a
-              class="au-c-link"
-              href="https://github.com/MartijnBogaert/frontend-openproceshuis/commit/{{app-version
-                shaOnly=true
-              }}"
-            >{{app-version shaOnly=true}}</a>)
-          {{else}}
-            v{{app-version versionOnly=true}}
-          {{/if}}
-        </AuHelpText>
-      </div>
-    </div>
-  </:sidebar>
-  <:content>
-    <div class="au-o-box">
-      <AuHeading @skin="2" class="au-u-margin-bottom-large">
-        {{this.currentSession.user.fullName}}
-      </AuHeading>
-
-      <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">
-        Beschikbare module
-      </AuHeading>
-
-      <ul class="au-o-grid au-o-grid">
-        <li class="au-o-grid__item au-u-1-2@medium au-u-2-5@large">
-          <AuCard @flex={{true}} as |c|>
-            <c.header @badgeSkin="brand" @badgeIcon="sitemap">
-              <AuHeading @level="3" @skin="4">
-                BPMN-bestanden
-              </AuHeading>
-            </c.header>
-            <c.content>
-              <ul>
-                <li>Raadpleeg processen</li>
-                <li>Voeg processen toe</li>
-              </ul>
-            </c.content>
-            <c.footer>
-              <AuButtonGroup class="au-c-button-group--wrap">
-                <LinkTo class="au-c-button" @route="bpmn-files">
-                  Ga naar BPMN-bestanden
-                </LinkTo>
-              </AuButtonGroup>
-            </c.footer>
-          </AuCard>
-        </li>
-        <li class="au-o-grid__item au-u-1-2@medium au-u-2-5@large">
-          <AuCard @flex={{true}} as |c|>
-            <c.header @badgeSkin="brand" @badgeIcon="unordered-list">
-              <AuHeading @level="3" @skin="4">
-                Processtappen
-              </AuHeading>
-            </c.header>
-            <c.content>
-              <ul>
-                <li>Doorzoek bouwblokken van processen</li>
-                <li>Raadpleeg originele BPMN-bestanden</li>
-              </ul>
-            </c.content>
-            <c.footer>
-              <AuButtonGroup class="au-c-button-group--wrap">
-                <LinkTo class="au-c-button" @route="bpmn-elements">
-                  Ga naar processtappen
-                </LinkTo>
-              </AuButtonGroup>
-            </c.footer>
-          </AuCard>
-        </li>
-      </ul>
-    </div>
-  </:content>
-</SidebarContainer> --}}
-
 <LayoutHome>
   <AuBodyContainer class="au-u-background-gray-100">
     <section class="c-home">
@@ -119,12 +13,7 @@
               {{!template-lint-disable require-valid-alt-text}}
             />
           </div>
-          <p>Raadpleeg processen en originele BPMN-bestanden. Doorzoek bouwblokken van processen.</p>
-          {{!-- <AuList @divider={{true}} as |Item|>
-            <Item>Raadpleeg processen</Item>
-            <Item>Doorzoek bouwblokken van processen</Item>
-            <Item>Deel jouw processen</Item>
-          </AuList> --}}
+          <p>Raadpleeg processen en originele BPMN-bestanden. Doorzoek processtappen en upload processen.</p>
         </AuContent>
         <div class="au-c-home__form au-o-flow">
           <div class="au-o-grid au-o-grid--small">
@@ -132,13 +21,13 @@
               <AuCard @flex={{true}} as |c|>
                 <c.header @badgeSkin="brand" @badgeIcon="sitemap" @badgeSize="small">
                   <AuHeading @level="2" @skin="4">
-                    Processen bibliotheek
+                    Processenbibliotheek
                   </AuHeading>
                 </c.header>
                 <c.content>
                   <AuList @divider={{true}} as |Item|>
                     <Item>Raadpleeg processen</Item>
-                    <Item>Doorzoek bouwblokken van processen</Item>
+                    <Item>Doorzoek processtappen</Item>
                   </AuList>
                 </c.content>
                 <c.footer>
@@ -150,7 +39,7 @@
                       <AuLink
                         @skin="button-secondary"
                         @route="bpmn-elements"
-                      >Bouwblokken</AuLink>
+                      >Processtappen</AuLink>
                   </div>
                 </c.footer>
               </AuCard>
@@ -164,8 +53,8 @@
                 </c.header>
                 <c.content>
                   <AuList @divider={{true}} as |Item|>
-                    <Item>Raadpleeg processen</Item>
-                    <Item>Doorzoek bouwblokken van processen</Item>
+                    <Item>Upload processen</Item>
+                    <Item>Beheer gedeelde processen</Item>
                   </AuList>
                 </c.content>
                 <c.footer>
