show steps with name on detail page

--- a/app/templates/bpmn-uploads/bpmn-file/index.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file/index.hbs
@@ -166,7 +166,7 @@
       >Processtappen</AuHeading>
       <div class="au-c-boxed-table">
         <AuDataTable
-          @content={{this.model.loadedBpmnFiles}}
+          @content={{this.bpmnElements}}
           @isLoading={{this.isLoading}}
           @page={{this.page}}
           @size={{this.size}}
