--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -65,7 +65,9 @@
             <c.content>
               <ul>
                 <li>Raadpleeg processen</li>
-                <li>Voeg processen toe</li>
+                {{#if this.session.isAuthenticated}}
+                  <li>Voeg processen toe</li>
+                {{/if}}
               </ul>
             </c.content>
             <c.footer>
