Hide/show elements based on editor role

--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -5,7 +5,7 @@
   </:title>
   <:action>
 
-    {{#if this.session.isAuthenticated}}
+    {{#if this.currentSession.canEdit}}
       <AuButton @skin="secondary">Wijzig</AuButton>
     {{/if}}
     <a
