Feature/mock-login (#8)
* Get rid of unnecessary application adapter logic

* Enable authentication/authorization through mock-login

* Make app header functional

* Make application public

* Hide elements from unauthenticated users

* Remove unnecessary authentication check

* Fix authorization bug

* Hide/show elements based on editor role

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -65,7 +65,9 @@
             <c.content>
               <ul>
                 <li>Raadpleeg processen</li>
-                <li>Voeg processen toe</li>
+                {{#if this.currentSession.canEdit}}
+                  <li>Voeg processen toe</li>
+                {{/if}}
               </ul>
             </c.content>
             <c.footer>
