--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -3,18 +3,21 @@
   @homeRoute="index"
   @appTitle={{config "appName"}}
 >
-  <AuDropdown
-    @title={{this.currentSession.title}}
-    @buttonLabel="Account settings"
-    @alignment="right"
-    role="menu"
-  >
-    <AuLink @icon="switch" role="menuitem">
-      Wissel van bestuurseenheid
-    </AuLink>
-
-    <AuLink @icon="logout" role="menuitem">
-      Afmelden
-    </AuLink>
-  </AuDropdown>
+  {{#if this.session.isAuthenticated}}
+    <AuDropdown
+      @title={{this.currentSession.title}}
+      @buttonLabel="Account settings"
+      @alignment="right"
+      role="menu"
+    >
+      <AuLink @route="auth.switch" @icon="switch" role="menuitem">
+        Wissel van bestuurseenheid
+      </AuLink>
+      <AuLink @route="auth.logout" @icon="logout" role="menuitem">
+        Afmelden
+      </AuLink>
+    </AuDropdown>
+  {{else}}
+    <LoginButton @isCompact={{true}} />
+  {{/if}}
 </AuMainHeader>
